--- a/templates/base.html
+++ b/templates/base.html
@@ -210,7 +210,7 @@
     </div><!-- div wrapper -->
     {% endblock %}
 
-    {% if request.user.user_settings_task and not request.user.user_settings_task.is_finished and not request.is_user_settings_page %}
+    {% if request.user.user_settings_task and not request.user.user_settings_task.is_finished and not request.suppress_prompt_banner %}
     <div id="please-complete-account-settings" class="container" style="margin-top: 1em;">
         <div class="alert alert-warning">
           Please complete <a href="{{request.user.user_settings_task.get_absolute_url}}">your account settings</a>.
