split the task view into three views: continue (redirects to the next question or task finished view), question (a particular question named in the url), task finished
All so that we can have a permalink to the module finished page. Some untangling was necessary because page permissions required knowing which question was being shown (for discussion guests), which required evaluating the answers to know the next question. By splitting the next-question logic from the question page view, we can evaluate the next question in a view that doesn't have discussions.

fixes #253

--- a/templates/question.html
+++ b/templates/question.html
@@ -671,7 +671,7 @@ $(function() {
         // But there's a constructor that does this for us:
         var data = new FormData($('form')[0]);
         ajax_with_indicator({
-            url: window.location.pathname,
+            url: "{{task.get_absolute_url|escapejs}}/_save",
             method: "POST",
             data: data,
             keep_indicator_forever: true, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
