Improve layout of project_list page
Add jumbotron with organization logo and name to top of project_list
page. Add folder glyphicon. More whitespace between assessments.
Simplify text under each assessment. Link org name in breadcrumbs to
project_list page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -197,7 +197,7 @@
           <span class="glyphicon glyphicon-globe"></span>
           {% endif %}
         {% endwith %}
-        <a href="/" style="color: black; font-size: 1.1em; font-weight: bold;">
+        <a href="/projects" style="color: black; font-size: 1.1em; font-weight: bold;">
           {{request.organization.name}}</a>
       {% else %}
         {{request.get_host}}
