--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -85,7 +85,7 @@ Home
 
 
 <div style="text-align: right; margin-bottom: 1em">
-  <a id="new-project" href="/new-project" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> New Assessment</a>
+  <a id="new-assessment" href="/assessment-catalog" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> New Assessment</a>
 </div>
 
 {% if folders|length == 0 %}
