--- a/templates/question.html
+++ b/templates/question.html
@@ -345,7 +345,7 @@ label:hover .onhover { display: inline; }
               <p class="help-block">Your answer will be encrypted and will only be available to you when accessed from this web browser within the next {{ephemeral_encryption_lifetime}}.</p>
             {% endif %}
 
-            <hr style="margin: 60px 0px 40px 0px;"/>
+            <div style="margin: 0px 0px 20px 0px;" >&nbsp;</div>
 
             {% if write_priv %}
             <button id="save-button"
