tweak assessment pages

--- a/templates/assessment-catalog-item-start.html
+++ b/templates/assessment-catalog-item-start.html
@@ -35,4 +35,5 @@
     {% buttons %}
       <button id="start-assessment" type="submit" class="btn btn-success">Begin &raquo;</button>
     {% endbuttons %}
-</form> {% endblock %}
+</form>
+{% endblock %}
