--- a/templates/assessment-catalog-item.html
+++ b/templates/assessment-catalog-item.html
@@ -10,7 +10,7 @@
   margin-top: 20px;
   padding: 1em;
   border: 1px solid #999;
-  background-color: #EEE;
+  background-color: #FAFAFA;
   border-radius: 15px;
 }
 </style>
