--- a/templates/task-breadcrumbs.html
+++ b/templates/task-breadcrumbs.html
@@ -1,4 +1,8 @@
 <li>
+  <span class="glyphicon glyphicon-folder-open" style="margin-right: .25em"></span>
+  {{task.project.folder_name}}
+</li>
+<li>
 	<a href="{{task.project.get_absolute_url}}">
 	  <span class="glyphicon glyphicon-hdd" style="color: #449d44; margin-right: .25em"></span>
 	  {{task.project.title}}
