btn-sm font size was broken by 3d6e243371d04583a8d653ba84b582c2e463d4ec

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
             .glyphicon-globe { color: #888; }
             .glyphicon-plus { color: #FFF; }
             .btn { white-space: normal; font-size: inherit; }
+            .btn.btn-sm { font-size: 12px; }
             footer { margin-top:60px;
               font-size: .75em;
               color: #888;
