replace the last two disk drive icons for projects with a new icon that is better for assessments

--- a/templates/project.html
+++ b/templates/project.html
@@ -122,7 +122,7 @@
   {{project.folder_name}}
 </li>
 <li class="active">
-    <span class="glyphicon glyphicon-hdd" style="color: #449d44; margin-right: .25em"></span>
+    <span class="glyphicon glyphicon-list-alt" style="margin-right: .25em"></span>
   {{project.title}}
 </li>
 {% endblock %}
