--- a/templates/task-breadcrumbs.html
+++ b/templates/task-breadcrumbs.html
@@ -4,7 +4,7 @@
 </li>
 <li>
 	<a href="{{task.project.get_absolute_url}}">
-	  <span class="glyphicon glyphicon-hdd" style="color: #449d44; margin-right: .25em"></span>
+	  <span class="glyphicon glyphicon-list-alt" style="margin-right: .25em"></span>
 	  {{task.project.title}}
 	</a>
 </li>
